examples/ill-formed/scheme/scheme-specific/NotOverridingFields.scheme
import 'examples/ill-formed/fixtures/SimplePrimitive.primitive';

Scheme NotOverridingFields() extends SimplePrimitive {
    Int f() {
        return 1;
    }
}
